Виконання завдання з використанням функцій бібліотеки math.h

--- a/lAB2_3/lAB2_3.vcxproj
+++ b/lAB2_3/lAB2_3.vcxproj
@@ -154,6 +154,7 @@
   <ItemGroup>
     <ClCompile Include="Lab2_3.c">
       <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">/utf-8</AdditionalOptions>
     </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
